--- a/base.org
+++ b/base.org
@@ -125,7 +125,7 @@ in a typing install of Guix/Linux.
 		   (mount-point "/")
 		   (type "ext4"))))
 
-   (users (cons (use-account
+   (users (cons (user-account
 		 (name "gsimmer")
 		 (comment "Gabriel Simmer")
 		 (password (crypt "pass" "$6$abc"))
