--- a/base.org
+++ b/base.org
@@ -108,7 +108,7 @@ in a typing install of Guix/Linux.
    (firmware (list linux-firmware))
    (initrd microcode-initrd)
 
-   (keyboard-layout (keyboard-layout "us"))
+   (keyboard-layout (keyboard-layout "us" "intl"))
 
    (bootloader (bootloader-configuration
 		(bootloader grub-efi-bootloader)
