--- a/README.org
+++ b/README.org
@@ -13,6 +13,7 @@ original old configs are in =archive/=.
 :end:
 :contents:
 - [[#my-setup][My Setup]]
+  - [[#zsh][zsh]]
   - [[#wezterm][WezTerm]]
   - [[#systemd-units][Systemd Units]]
   - [[#sublime-text][Sublime Text]]
@@ -27,6 +28,48 @@ original old configs are in =archive/=.
    Sublime in my workflow. As a part of this I've also considered using Guix (see: =seedfile.org=),
    but am not quite there in my journey, so they aren't included here.
 
+*** zsh
+
+    zsh is my choice of shell, with some written-in-Rust replacements for
+    a few CLI tools.
+
+    =.zshrc=
+
+#+begin_src shell :tangle .zshrc
+export ZSH="/home/gsimmer/.oh-my-zsh"
+
+ZSH_THEME="frisk"
+
+plugins=(git fzf zsh-autosuggestions)
+
+source $ZSH/oh-my-zsh.sh
+
+# User configuration
+export NVM_DIR="$HOME/.nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+
+export GOPATH="/home/gsimmer/Projects/go"
+export CARGOPATH="/home/gsimmer/.cargo/bin"
+export PATH="/home/gsimmer/.local/bin:$GOPATH/bin:$CARGOPATH:$PATH"
+
+# Starship init.
+#eval "$(starship init zsh)"
+
+# aliases for various Rust-based utils.
+if [ $(which exa) != 'exa not found' ]; then
+   alias ls=exa
+fi
+if [ $(which bat) != 'bat not found' ]; then
+   alias cat=bat
+fi
+if [ $(which rg) != 'rg not found' ]; then
+   alias grep=rg
+fi
+source /usr/share/nvm/init-nvm.sh
+eval "$(pyenv init -)"
+#+end_src
+   
 *** wezterm
 
     WezTerm is my terminal of choice these days, and is configured with Lua.
@@ -248,9 +291,9 @@ WantedBy=timers.target
     and plan to split it into seperate files for each package. In the
     meantime, enjoy the monolith.
 
-    =.config/.emacs.d/init.el=
+    =..emacs.d/init.el=
     
-#+begin_src elisp :tangle .config/.emacs.d/init.el
+#+begin_src elisp :tangle .emacs.d/init.el
 ;; Mostly following along with System Crafter's videos.
 ;; So this will look pretty familiar.
 (setq inhibit-startup-message  t)
@@ -261,6 +304,10 @@ WantedBy=timers.target
 (set-fringe-mode 10)
 
 (menu-bar-mode -1)
+
+;; disable auto-save and auto-backup
+(setq auto-save-default nil)
+(setq make-backup-files nil)
 
 (set-face-attribute 'default nil :font "IBM Plex Mono" :height 120)
 (global-set-key (kbd "<escape>") 'keyboard-escape-quit)
